// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea must return the diff between snapshot when TextArea has a disable vs enable autocomplete 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -10,11 +10,11 @@
    <div
      className="sc-1ln9y8s-4 gXgjdc"
    >
      <BasicTextAreaStyle
        aria-required={false}
-       autoComplete="off"
+       autoComplete="on"
        id="bar"
        maxRows={25}
        name="bar"
        onChange={[Function handleChange]}
        required={false}
`;

exports[`TextArea must return the diff between snapshot when TextArea has a enable vs disable spellchecking 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -17,11 +17,11 @@
        maxRows={25}
        name="bar"
        onChange={[Function handleChange]}
        required={false}
        rows={5}
-       spellCheck={true}
+       spellCheck={false}
        value="baz"
      />
      <label
        className="sc-1ln9y8s-9 kMUtp"
        htmlFor="bar"
`;

exports[`TextArea must return the diff between snapshot when TextArea has a limit of characters or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -12,11 +12,13 @@
    >
      <BasicTextAreaStyle
        aria-required={false}
        autoComplete="off"
        id="bar"
+       maxLength="450"
        maxRows={25}
+       minLength="25"
        name="bar"
        onChange={[Function handleChange]}
        required={false}
        rows={5}
        spellCheck={true}
@@ -26,7 +28,10 @@
        className="sc-1ln9y8s-9 kMUtp"
        htmlFor="bar"
      >
        qux
      </label>
+     <TextAreaCounterStyle>
+       3/450
+     </TextAreaCounterStyle>
    </div>
  </div>
`;

exports[`TextArea must return the diff between snapshot when TextArea is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -9,17 +9,17 @@
    </span>
    <div
      className="sc-1ln9y8s-4 gXgjdc"
    >
      <BasicTextAreaStyle
-       aria-required={true}
+       aria-required={false}
        autoComplete="off"
        id="bar"
        maxRows={25}
        name="bar"
        onChange={[Function handleChange]}
-       required={true}
+       required={false}
        rows={5}
        spellCheck={true}
        value="baz"
      />
      <label
`;
